7129420: [macosx] SplashScreen.getSplashScreen() returns null Summary: Use GetJREPath() to infer the location of the splash screen library Reviewed-by: art, ksrini, swingler